// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.25rem;
  border: solid 1px #ecedf0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.75rem;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
}

.c0:hover {
  border-color: #c0c4cb;
}

<div
  className="c0"
/>
`;

exports[`Container should apply warning modifier 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.25rem;
  border: solid 1px #ecedf0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.75rem;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  border-color: #967100;
}

.c0:hover {
  border-color: #c0c4cb;
}

.c0:hover {
  border-color: #967100;
}

<div
  className="c0"
/>
`;
